--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "*", features = ["derive"] }
 rapier2d = "*"
 
 [[bin]]
-name = "random"
+name = "solve"
 
 [profile.dev.package.rapier2d]
 opt-level = 3
